--- a/now.json
+++ b/now.json
@@ -1,8 +1,7 @@
 {
+  "version": 2,
+  "name": "stock-data",
   "builds": [
-    {
-      "src": "src/index.js",
-      "use": "@now/node"
-    }
+    { "src": "src/*.js", "use": "@now/node" }
   ]
 }
