--- a/now.json
+++ b/now.json
@@ -2,6 +2,6 @@
   "version": 2,
   "name": "stock-data",
   "builds": [
-    { "src": "src/*.js", "use": "@now/node" }
+    { "src": "src/index.js", "use": "@now/node" }
   ]
 }
